[pluto] - fixed axis grid line overlap with axis line
Former-commit-id: 93556e79c48396c44689908aef8484ac8a8ea2d5

--- a/pluto/src/core/std/Dropdown/Dropdown.css
+++ b/pluto/src/core/std/Dropdown/Dropdown.css
@@ -23,13 +23,13 @@
     position: fixed;
 }
 
-.pluto-dropdown.pluto--hidden .pluto-dropdown__dialog {
+.pluto-dropdown__dialog.pluto--hidden {
     opacity: 0;
     z-index: -1;
     pointer-events: none;
     height: 0;
 }
 
-.pluto-dropdown.pluto--visible .pluto-dropdown__dialog {
+.pluto-dropdown__dialog.pluto--visible {
     z-index: 10;
 }
